--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -1,2 +1,120 @@
-Hello scenarios list
-<pre style="color: red">{{ data | json }}</pre>
+<section class="d-flex justify-content-end mb-3">
+  <button
+    nbButton
+    status="primary"
+    (click)="add()"
+  >
+    <nb-icon icon="plus-outline"></nb-icon>
+    Create
+  </button>
+</section>
+
+<section [class.grid]="isSidePanelOpen">
+  <nb-card [nbSpinner]="loading">
+    <nb-card-body>
+      <table [nbTreeGrid]="dataSource">
+        <tr
+          nbTreeGridHeaderRow
+          *nbTreeGridHeaderRowDef="allColumns"
+        ></tr>
+        <tr
+          nbTreeGridRow
+          *nbTreeGridRowDef="let row; columns: allColumns"
+        ></tr>
+
+        <ng-container [nbTreeGridColumnDef]="categoryColumn">
+          <th
+            nbTreeGridHeaderCell
+            *nbTreeGridHeaderCellDef
+          >
+            {{ categoryColumn }}
+          </th>
+          <td
+            nbTreeGridCell
+            *nbTreeGridCellDef="let row"
+          >
+            <nb-tree-grid-row-toggle
+              *ngIf="row.data.expandable"
+              [expanded]="row.expanded"
+            ></nb-tree-grid-row-toggle>
+            <span *ngIf="row.data.expandable">{{ row.data[categoryColumn] }}</span>
+          </td>
+        </ng-container>
+
+        <ng-container
+          *ngFor="let column of defaultColumns; let index = index"
+          [nbTreeGridColumnDef]="column"
+        >
+          <th
+            nbTreeGridHeaderCell
+            *nbTreeGridHeaderCellDef
+            [class.descriptionColumn]="column === 'description'"
+          >
+            {{ column }}
+          </th>
+          <td
+            nbTreeGridCell
+            *nbTreeGridCellDef="let row"
+          >
+            {{ row.data[column] }}
+          </td>
+        </ng-container>
+
+        <ng-container [nbTreeGridColumnDef]="actionsColumn">
+          <th
+            nbTreeGridHeaderCell
+            *nbTreeGridHeaderCellDef
+            class="actionColumn"
+          >
+            {{ actionsColumn }}
+          </th>
+          <td
+            nbTreeGridCell
+            *nbTreeGridCellDef="let row"
+          >
+            <div *ngIf="!row.data.expandable">
+              <button
+                nbButton
+                ghost
+                shape="round"
+                nbTooltip="Edit"
+                (click)="edit(row.data)"
+              >
+                <nb-icon icon="edit-outline"></nb-icon>
+              </button>
+              <button
+                nbButton
+                ghost
+                shape="round"
+                nbTooltip="Delete"
+                (click)="delete(row.data)"
+              >
+                <nb-icon icon="trash-2-outline"></nb-icon>
+              </button>
+            </div>
+          </td>
+        </ng-container>
+      </table>
+    </nb-card-body>
+  </nb-card>
+
+  <nb-card
+    *ngIf="isSidePanelOpen"
+    class="side-panel"
+  >
+    <nb-card-body>
+      <div class="d-flex justify-content-between align-items-start">
+        <h2>Add / Edit Component</h2>
+        <button
+          nbButton
+          ghost
+          shape="round"
+          nbTooltip="Close"
+          (click)="closeSidePanel()"
+        >
+          <nb-icon icon="close-outline"></nb-icon>
+        </button>
+      </div>
+    </nb-card-body>
+  </nb-card>
+</section>
