--- a/bot/admin/web/src/app/scenarios/scenarios-edit/scenarios-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-edit/scenarios-edit.component.scss
@@ -54,7 +54,7 @@
   text-align: center;
   background-color: white;
   padding: 1rem;
-  box-shadow: 0 0.5rem 1rem 0 rgb(44, 51, 73 / 10%);
+  box-shadow: 0 0.5rem 1rem 0 #0e0e0e24;
 
   .from {
     IMG {
