--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -82,6 +82,15 @@
               >
                 <nb-icon icon="edit-outline"></nb-icon>
               </button>
+              <a
+                nbButton
+                ghost
+                shape="round"
+                nbTooltip="Designer"
+                [routerLink]="'./' + row.data.id"
+              >
+                <nb-icon icon="color-palette-outline"></nb-icon>
+              </a>
               <button
                 nbButton
                 ghost
