Dynamic scenario loading + Misc

--- a/bot/admin/web/src/app/scenarios/scenarios-edit/scenarios-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-edit/scenarios-edit.component.html
@@ -16,6 +16,7 @@
       nbButton
       size="small"
       status="basic"
+      [routerLink]="'../'"
     >
       Cancel
     </button>
@@ -36,6 +37,7 @@
       Save & exit
     </button>
 
+    <!-- 
     <button
       nbButton
       size="small"
@@ -45,9 +47,7 @@
     >
       Test story
     </button>
-
-    <!-- 
-      <button
+    <button
       nbButton
       size="tiny"
       status="info"
