--- a/bot/admin/web/src/app/scenarios/scenarios-edit/editor-entry.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-edit/editor-entry.component.scss
@@ -31,8 +31,8 @@
 }
 
 $inactive-color: transparent;
-$bot-color: #0095ff54;
-$bot-final-color: #0095ffb0;
+$bot-color: #90c3ea;
+$bot-final-color: #43abf5;
 $client-color: white;
 $verification-color: #bebebe;
 
@@ -58,6 +58,7 @@ $verification-color: #bebebe;
     padding: 0.3rem 0.5rem;
     line-height: 1.4;
     min-height: 7rem;
+    width: 100%;
     max-width: 100%;
     background-color: transparent;
     border-color: #00000030;
@@ -65,7 +66,7 @@ $verification-color: #bebebe;
 
   .from-icon {
     position: absolute;
-    left: -2.5rem;
+    left: -2.4rem;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     box-shadow: 0px 12px 15px -12px rgba($color: #000000, $alpha: 0.3);
