--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -116,23 +116,9 @@
     </nb-card-body>
   </nb-card>
 
-  <nb-card
+  <tock-scenario-edit
     *ngIf="isSidePanelOpen"
-    class="side-panel"
-  >
-    <nb-card-body>
-      <div class="d-flex justify-content-between align-items-start">
-        <h2>Add / Edit Component</h2>
-        <button
-          nbButton
-          ghost
-          shape="round"
-          nbTooltip="Close"
-          (click)="closeSidePanel()"
-        >
-          <nb-icon icon="close-outline"></nb-icon>
-        </button>
-      </div>
-    </nb-card-body>
-  </nb-card>
+    [scenario]="scenarioEdit"
+    (handleClose)="closeSidePanel()"
+  ></tock-scenario-edit>
 </section>
