Post/put scenario

--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -96,7 +96,7 @@
             status="primary"
             type="button"
             [disabled]="!canSave"
-            (click)="saveRedirectDesigner()"
+            (click)="save(true)"
           >
             Save and design
           </button>
