--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -120,5 +120,6 @@
     *ngIf="isSidePanelOpen"
     [scenario]="scenarioEdit"
     (handleClose)="closeSidePanel()"
+    (handleSave)="saveScenario($event)"
   ></tock-scenario-edit>
 </section>
