feature: aligner le bouton FAQ sur la droite

--- a/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
+++ b/bot/admin/web/src/app/faq/faq-definition/faq-definition.component.html
@@ -15,7 +15,7 @@
   -->
 
   <div class="title-faq mb-4" *ngIf="!isDockedOrSmall()">
-      <h5 class="h5 mr-4">FAQ Content Management</h5>
+      <h5 class="h5">FAQ Content Management</h5>
       <button (click)="openNewSidepanel()" nbButton status="primary">New FAQ</button>
   </div>
 
