feat(scenario-edit): add dirty and touched behaviour when update form array, add cancel popup of confirmation

--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -75,6 +75,7 @@
           nbButton
           outline
           status="primary"
+          size="small"
           type="button"
           (click)="close()"
         >
@@ -84,6 +85,7 @@
           <button
             nbButton
             status="primary"
+            size="small"
             type="submit"
             [disabled]="!canSave"
             (click)="save()"
@@ -94,6 +96,7 @@
             nbButton
             class="ml-1"
             status="primary"
+            size="small"
             type="button"
             [disabled]="!canSave"
             (click)="save(true)"
