feat(scenario-edit): add default category when the category is not informed

--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -101,7 +101,7 @@
             [disabled]="!canSave"
             (click)="save(true)"
           >
-            Save and design
+            Save & design
           </button>
         </div>
       </div>
