--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.scss
@@ -3,3 +3,19 @@
   position: sticky;
   top: 5.75rem;
 }
+
+.grid-button {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0.5rem;
+}
+
+@media screen and (min-width: 400px) {
+  .grid-button {
+    grid-template-columns: 1fr auto auto;
+
+    button {
+      width: fit-content;
+    }
+  }
+}
