--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -1,10 +1,10 @@
-<section class="d-flex justify-content-end mb-3">
+<section class="grid-actions mb-3">
   <button
     *ngIf="currentViewMode === viewMode.LIST"
     nbButton
     ghost
     shape="round"
-    nbTooltip="Switch to tree view"
+    nbTooltip="Switch to table view"
     (click)="switchViewMode()"
   >
     <nb-icon icon="grid-outline"></nb-icon>
@@ -14,7 +14,7 @@
     nbButton
     ghost
     shape="round"
-    nbTooltip="Switch to list view"
+    nbTooltip="Switch to scroll view"
     (click)="switchViewMode()"
   >
     <nb-icon icon="menu-outline"></nb-icon>
@@ -30,122 +30,24 @@
 </section>
 
 <section [class.grid]="isSidePanelOpen">
-  <tock-scenario-list-simple
-    *ngIf="currentViewMode === viewMode.LIST"
-    [scenarios]="scenarios"
-  ></tock-scenario-list-simple>
-  <tock-scenario-tree
-    *ngIf="currentViewMode === viewMode.TREE"
-    [scenarios]="scenarios"
-  ></tock-scenario-tree>
   <nb-card
-    *ngIf="currentViewMode === viewMode.TREE"
+    *ngIf="loading"
+    class="loading"
     [nbSpinner]="loading"
-  >
-    <nb-card-body>
-      <h2
-        *ngIf="!loading && !dataSource"
-        class="text-center"
-      >
-        No data
-      </h2>
-      <table
-        *ngIf="!loading && dataSource"
-        [nbTreeGrid]="dataSource"
-      >
-        <tr
-          nbTreeGridHeaderRow
-          *nbTreeGridHeaderRowDef="allColumns"
-        ></tr>
-        <tr
-          nbTreeGridRow
-          *nbTreeGridRowDef="let row; columns: allColumns"
-        ></tr>
+  ></nb-card>
+  <tock-scenario-list-simple
+    *ngIf="!loading && scenarios?.length && currentViewMode === viewMode.LIST"
+    [scenarios]="scenarios"
+    (handleEdit)="edit($event)"
+    (handleDelete)="delete($event)"
+  ></tock-scenario-list-simple>
 
-        <ng-container [nbTreeGridColumnDef]="categoryColumn">
-          <th
-            nbTreeGridHeaderCell
-            *nbTreeGridHeaderCellDef
-          >
-            {{ categoryColumn }}
-          </th>
-          <td
-            nbTreeGridCell
-            *nbTreeGridCellDef="let row"
-          >
-            <nb-tree-grid-row-toggle
-              *ngIf="row.data.expandable"
-              [expanded]="row.expanded"
-            ></nb-tree-grid-row-toggle>
-            <span *ngIf="row.data.expandable">{{ row.data[categoryColumn] }}</span>
-          </td>
-        </ng-container>
-
-        <ng-container
-          *ngFor="let column of defaultColumns; let index = index"
-          [nbTreeGridColumnDef]="column"
-        >
-          <th
-            nbTreeGridHeaderCell
-            *nbTreeGridHeaderCellDef
-            [class.descriptionColumn]="column === 'description'"
-          >
-            {{ column }}
-          </th>
-          <td
-            nbTreeGridCell
-            *nbTreeGridCellDef="let row"
-          >
-            {{ row.data[column] }}
-          </td>
-        </ng-container>
-
-        <ng-container [nbTreeGridColumnDef]="actionsColumn">
-          <th
-            nbTreeGridHeaderCell
-            *nbTreeGridHeaderCellDef
-            class="actionColumn"
-          >
-            {{ actionsColumn }}
-          </th>
-          <td
-            nbTreeGridCell
-            *nbTreeGridCellDef="let row"
-          >
-            <div *ngIf="!row.data.expandable">
-              <button
-                nbButton
-                ghost
-                shape="round"
-                nbTooltip="Edit"
-                (click)="edit(row.data)"
-              >
-                <nb-icon icon="edit-outline"></nb-icon>
-              </button>
-              <a
-                nbButton
-                ghost
-                shape="round"
-                nbTooltip="Designer"
-                [routerLink]="'./' + row.data.id"
-              >
-                <nb-icon icon="color-palette-outline"></nb-icon>
-              </a>
-              <button
-                nbButton
-                ghost
-                shape="round"
-                nbTooltip="Delete"
-                (click)="delete(row.data)"
-              >
-                <nb-icon icon="trash-2-outline"></nb-icon>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-      </table>
-    </nb-card-body>
-  </nb-card>
+  <tock-scenario-tree
+    *ngIf="!loading && scenarios?.length && currentViewMode === viewMode.TREE"
+    [scenarios]="scenarios"
+    (handleEdit)="edit($event)"
+    (handleDelete)="delete($event)"
+  ></tock-scenario-tree>
 
   <tock-scenario-edit
     *ngIf="isSidePanelOpen"
