--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -53,12 +53,12 @@
   >
     <div class="card-row">
       <div class="card-col">
-        <app-editor-entry
+        <scenario-designer-entry
           *ngIf="scenario?.data.length"
           [itemId]="0"
           [dataList]="scenario.data"
           [selectedItem]="selectedItem"
-        ></app-editor-entry>
+        ></scenario-designer-entry>
       </div>
     </div>
   </div>
