feat(scenario-list): add robot image

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.scss
@@ -8,6 +8,11 @@ section {
 
   & nb-card {
     height: min-content;
+
+    .tock-robot {
+      width: 4rem;
+      height: fit-content;
+    }
   }
 }
 
