--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -1,6 +1,6 @@
 <section class="grid-actions mb-3">
   <button
-    *ngIf="currentViewMode === viewMode.LIST"
+    *ngIf="scenarios?.length && currentViewMode === viewMode.LIST"
     nbButton
     ghost
     shape="round"
@@ -10,7 +10,7 @@
     <nb-icon icon="grid-outline"></nb-icon>
   </button>
   <button
-    *ngIf="currentViewMode === viewMode.TREE"
+    *ngIf="scenarios?.length && currentViewMode === viewMode.TREE"
     nbButton
     ghost
     shape="round"
@@ -35,6 +35,20 @@
     class="loading"
     [nbSpinner]="loading"
   ></nb-card>
+
+  <nb-card *ngIf="!loading && !scenarios?.length">
+    <nb-card-body class="d-flex">
+      <img
+        src="{{ baseHref }}assets/images/best_bot_gray.png"
+        class="tock-robot mr-4"
+      />
+      <div>
+        <h2 class="text-muted">No Scenario found</h2>
+        You may create a new one using above button "Create".
+      </div>
+    </nb-card-body>
+  </nb-card>
+
   <tock-scenario-list-simple
     *ngIf="!loading && scenarios?.length && currentViewMode === viewMode.LIST"
     [scenarios]="scenarios"
