Scenarios simple list with sortable columns

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -1,14 +1,8 @@
 <div class="row mb-3">
   <div class="col">
-    <nb-icon
-      *ngIf="this.scenario?.name"
-      nbTooltip="Scenario"
-      icon="film-outline"
-    ></nb-icon>
-
-    <strong>
+    <h4 class="capitalize">
       {{ this.scenario?.name }}
-    </strong>
+    </h4>
   </div>
 
   <div class="col text-right">
