--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -7,8 +7,7 @@
   height: 75vh;
   overflow: hidden;
 
-  background-color: #85838336;
-  // border-radius: 0.5rem;
+  // background-color: #85838336;
 
   .canvas {
     padding: 1.5rem;
