--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -45,7 +45,7 @@
 >
   <nb-card-body class="grid-columns">
     <div>
-      <div class="font-weight-bold capitalize">
+      <div class="font-weight-bold initial-capitalize">
         {{ scenario.name }}
       </div>
       <span class="text-muted">
@@ -53,7 +53,7 @@
       </span>
     </div>
 
-    <div class="capitalize">
+    <div class="initial-capitalize">
       {{ scenario.category }}
     </div>
 
