--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -4,6 +4,6 @@
 .pointer {
   cursor: pointer;
 }
-.capitalize::first-letter {
+.initial-capitalize::first-letter {
   text-transform: uppercase;
 }
