category and tags inputs autocomplete

--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -22,6 +22,7 @@
       <div class="d-flex flex-column mb-2">
         <label for="name">Name <span class="text-muted">(*)</span></label>
         <input
+          #nameInput
           nbInput
           formControlName="name"
           fullWidth
@@ -40,7 +41,17 @@
           id="category"
           type="text"
           placeholder="Select category"
+          autocomplete="off"
+          [nbAutocomplete]="categoryAutocomplete"
         />
+        <nb-autocomplete #categoryAutocomplete>
+          <nb-option
+            *ngFor="let option of categoryAutocompleteValues | async"
+            [value]="option"
+          >
+            {{ option }}
+          </nb-option>
+        </nb-autocomplete>
       </div>
 
       <div class="d-flex flex-column mb-2">
@@ -71,7 +82,17 @@
             placeholder="Enter tags"
             (tagAdd)="onTagAdd($event)"
             (keydown.enter)="eventPreventDefault($event)"
+            autocomplete="off"
+            [nbAutocomplete]="tagsAutocomplete"
           />
+          <nb-autocomplete #tagsAutocomplete>
+            <nb-option
+              *ngFor="let option of tagsAutocompleteValues | async"
+              [value]="option"
+            >
+              {{ option }}
+            </nb-option>
+          </nb-autocomplete>
         </nb-tag-list>
       </div>
 
