feat(scenarios-filters): add clear button, emit current filter to parent

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.scss
@@ -6,6 +6,10 @@
 
 @media screen and (min-width: 576px) {
   .grid {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+
+    .actions {
+      justify-self: end;
+    }
   }
 }
